Updated Certifications and Translation

--- a/index_de.html
+++ b/index_de.html
@@ -37,7 +37,7 @@
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
 								<h5>Paderborn</h5>
-								<h5>Germany</h5>
+								<h5>Deutschland</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -63,7 +63,7 @@
 					</div><!-- col-sm-4 -->
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
-			<a class="downlad-btn-english" href="https://drive.google.com/file/d/1b_6F6u2Bt2KbTvnQbH-uPtVEJwQnnuI2/view?usp=sharing">CV Herunterladen</a>
+			<a class="downlad-btn-english" href="https://drive.google.com/file/d/1b_6F6u2Bt2KbTvnQbH-uPtVEJwQnnuI2/view?usp=sharing">Lebenslauf Herunterladen</a>
 		</div><!-- container -->
 	</header>
 
@@ -132,9 +132,9 @@
 						<h6 class="margin-t-10">JULI 2016 - JULI 2019</h6>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
-								<li> Arbeitete an der RESTful-API mit Retrofit und OkHttp, um einen optimierten API-Verbrauch zu erzielen, auch unter Verwendung des reaktiven Programmierparadigmas mit reaktivem RxJava sowie mit Konzepten zur Behandlung des Abhängigkeitsmanagements mit Dagger. </li>
-								<li> Es wurde ein bibliotheksbasierter Abhängigkeitsansatz erstellt, um die neuen Funktionen in eine bereits vorhandene zu integrieren ausgereifte Codebasis, um minimale Änderungen zu erzielen. </li>
-								<li> Trug hauptsächlich durch die Verwendung der App-basierten API Calls zu den Funktionen mit zeitaufwändigen Remote-Diensten bei. </li>
+								<li> Arbeitete an der RESTful-API mit Retrofit und OkHttp, um einen optimierten API-Verbrauch zu erzielen, auch unter Verwendung des reaktiven Programmierparadigmas mit RxJava sowie mit Konzepten zur Behandlung des Dependency Management mit Dagger. </li>
+								<li> Es wurde ein Library Based Dependency erstellt, um die neuen Funktionen in eine bereits vorhandene zu integrieren ausgereifte Codebase, um minimale Änderungen zu erzielen. </li>
+								<li> Trug hauptsächlich durch die Verwendung der App-basierten API Calls zu den Funktionen mit zeitaufwändigen Remote-Services bei. </li>
 								<li> Arbeitete am schnellen Einfügen und Abrufen von Datenbankeinträgen in die SQLite-Datenbank. </li>
 								<li> Arbeitete an mehreren Proof-of-Concept für Funktionen wie Sprachbefehlserkennung für die Bildschirmnavigation, Integration des Payment gateways und Kartennavigation </li>
 								<li> Entwickelte ein Framework für Analytics von Third Party, um die App-Nutzung zu verstehen und Einblicke in die App-Nutzung zu erhalten. </li>
@@ -158,6 +158,12 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<div class="education-wrapper">
+						
+						<div class="education margin-b-50">
+							<h4><b>Neural Networks and Deep Learning Certification</b></h4>
+							<h5 class="font-yellow"><b>Coursera OnlineKurs bei deeplearning.ai</b></h5>
+							<h6 class="font-lite-black margin-t-10">JUNI 2019</h6>
+						</div><!-- education -->
 
 						<div class="education margin-b-50">
 							<h4><b>Machine Learning Certification</b></h4>
