Updated Java German

--- a/index_de.html
+++ b/index_de.html
@@ -271,6 +271,7 @@
 						<h4><b>LIBRARIES</b></h4>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
+							<li>Java.       :       Spring Boot Microservices, RxJava, JPA, JDBC</li>
 							<li>Android	: 	Retrofit, Dagger, RxJava, Sqlite, Google Analytics, Adobe Omniture</li>
 							<li>Python	: 	Numpy, Matplotlib, Pandas, Scikit-Learn</li>
 							<li>C/C++	: 	OpenMP, MPI</li>
